chore: upgrade kt & gradle version